# rorm-sql

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-test-lint.yml
src/: aggregation.rs  alter_table.rs  conditional.rs  create_column.rs  create_table.rs  create_trigger.rs  error.rs  insert.rs  join_table.rs  lib.rs  on_conflict.rs  select.rs  select_column.rs  update.rs  value.rs
src/db_specific/: mod.rs  mysql.rs  postgres.rs
