[package]
name = "rorm-sql"
version = "0.6.2"
edition = "2021"
keywords = ["database", "abstraction-layer", "sqlite", "postgres", "mysql"]
categories = ["database"]
authors = ["myOmikron <git@omikron.dev>"]
repository = "https://github.com/rorm-orm/rorm-sql"
homepage = "https://rorm.rs"
documentation = "https://docs.rorm.rs"
license = "MIT"
description = "The sql abstraction layer."

[dependencies]
# Date & time library
chrono = { version = ">=0.4.20", default-features = false }

# SQlite bindings for printf
libsqlite3-sys = { version = "~0.24", optional = true }

rorm-declaration = { version = "0.3.0", path = "../rorm-declaration" }

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.docs.rs]
all-features = true

[features]
sqlite = [
    "dep:libsqlite3-sys",
]
mysql = []
postgres = []
